--- a/style.css
+++ b/style.css
@@ -1,41 +1,61 @@
-*{
+* {
     padding: 0;
     margin: 0;
     text-decoration: none;
 }
-body{
+
+body {
     background-color: rgb(128, 183, 210);
 }
-#head{
+
+#head {
     margin-left: 30px;
     margin-top: 10px;
-} 
-nav{
+}
+
+nav {
+    background-color: aquamarine;
+    height: 80px;
     display: flex;
-    justify-content:flex-end;
-    
+    justify-content: flex-end;
+    align-items: center;
+    justify-content: space-between;
+
 }
 
 nav ul {
-    justify-content:space-between;
+    display: flex;
     list-style-type: none;
-    
+
 
 }
-.name{
-    margin-left: 2%;
-   
+
+li {
+    margin-right: 20px;
 }
-i{
+
+.name {
+    margin-left: 2%;
+
+}
+
+i {
     margin-right: 4px;
 }
-a{
-    color:#5121cb;
+
+a {
+    color: #5121cb;
 }
+
 h3 {
     padding-top: 10px;
     list-style-type: none;
 }
-.name li{
-    list-style-type: none;
+
+.name li {
+    list-style-type:none ;
+}
+#dot li{
+    list-style-type: disc;
+    margin-left: 20px;
 }
