--- a/style.css
+++ b/style.css
@@ -4,13 +4,22 @@
     text-decoration: none;
 }
 
-body {
+body { 
     background-color: rgb(176, 198, 209);
+    line-height: 1.6;
 }
 
 #head {
     margin-left: 30px;
     margin-top: 10px;
+    font-size: 30px;
+    font-family: sans-serif;
+    color: white;
+    text-shadow: 21px 22px 12px rgba(0, 0, 0, 0.25),
+        1px 2px 15px rgba(0, 0, 0, 0.25),
+        2px 2px  5px rgba(0, 0, 0, 5);
+
+    cursor: pointer;
 }
 
 nav {
@@ -20,6 +29,9 @@ nav {
     justify-content: flex-end;
     align-items: center;
     justify-content: space-between;
+    position:fixed;
+    width: 100%;
+    top: 0;
 
 }
 
@@ -35,16 +47,23 @@ li {
 }
 
 .name {
-    margin-left: 2%;
-
+    margin-left:2rem;
+    
 }
 
 i {
-    margin-right: 4px;
+    margin-right:15px;
+    
 }
 
-a {
-    color: #5121cb;
+ul li a {
+    font-weight: 600;
+    font-family: sans-serif;
+    color: white;
+    text-shadow: 21px 22px 12px rgba(0, 0, 0, 0.25),
+        1px 2px 15px rgba(0, 0, 0, 0.25),
+        2px 2px  5px rgba(0, 0, 0, 5);
+    ;
 }
 
 h3 {
@@ -53,20 +72,43 @@ h3 {
 }
 
 .name li {
-    list-style-type:none ;
+    list-style-type: none;
 }
-#dot li{
+
+#dot li {
     list-style-type: disc;
     margin-left: 20px;
 }
-h3{
+
+h3 {
     text-decoration-line: underline;
 }
-img{width: 100px;
+
+img {
+    
+    width: 100px;
     height: 100px;
 
+} 
+  main {
+   margin-top: 100px;
+
 }
-h5{
-    padding-top:20px;
+
+h5 {
+    padding-top: 20px;
+
+}
+a{
+    color:rgb(51, 80, 186);
+}
+.name h1{
+    font-size: 2.2rem;
     
+}
+footer{
+    text-align: center;
+    background-color: black;
+    color: #fff;
+    padding: 1rem;
 }
