--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body { 
-    background-color: rgb(176, 198, 209);
+    background-color: #d2d1d7;
     line-height: 1.6;
 }
 
@@ -15,15 +15,15 @@ body {
     font-size: 30px;
     font-family: sans-serif;
     color: white;
-    text-shadow: 21px 22px 12px rgba(0, 0, 0, 0.25),
+    text-shadow: 1px 2px 12px rgba(0, 0, 0, 0.25),
         1px 2px 15px rgba(0, 0, 0, 0.25),
-        2px 2px  5px rgba(0, 0, 0, 5);
+        2px 2px  5px rgba(0, 0, 0, 0.5);
 
     cursor: pointer;
 }
 
 nav {
-    background-color: rgb(106, 192, 205);
+    background-color: rgb(100, 160, 89);
     height: 80px;
     display: flex;
     justify-content: flex-end;
@@ -60,9 +60,9 @@ ul li a {
     font-weight: 600;
     font-family: sans-serif;
     color: white;
-    text-shadow: 21px 22px 12px rgba(0, 0, 0, 0.25),
+    text-shadow: 1px 2px 12px rgba(0, 0, 0, 0.25),
         1px 2px 15px rgba(0, 0, 0, 0.25),
-        2px 2px  5px rgba(0, 0, 0, 5);
+        2px 2px  5px rgba(0, 0, 0, 0.5);
     ;
 }
 
@@ -108,7 +108,7 @@ a{
 }
 footer{
     text-align: center;
-    background-color: black;
+    background-color: rgb(33, 41, 33);
     color: #fff;
     padding: 1rem;
 }
